cluster/apps/selfhosted/code-server/code-server-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: code-server
  namespace: selfhosted
  labels:
    app.kubernetes.io/name: code-server
spec:
  replicas: 1
  strategy:
    # All existing Pods are killed before new ones are created
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: code-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: code-server
    spec:
      containers:
      - name: code-server
        image: ghcr.io/zhorvath83/code-server:1.0.18
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
        livenessProbe:
          httpGet:
            port: 8080
            path: /healthz
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /healthz
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        ports:
          - containerPort: 8080
            name: code-server
        volumeMounts:
          - name: code-server-data
            mountPath: /home/coder
      volumes:
        - name: code-server-data
          persistentVolumeClaim:
            claimName: code-server-data
