cluster/apps/selfhosted/code-server/code-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: selfhosted
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: code-server
  type: ClusterIP
